WebApp/webApp/logs/nohup.out.bak20181206182909
Traceback (most recent call last):
  File "./main/main.py", line 5, in <module>
    from handle import Handle
  File "/opt/WeChatDYH/webapp/main/handle.py", line 46
    with open('./files/handle.txt', 'a') as f:
    ^
IndentationError: unexpected indent
